--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint **/*.ts",
+    "lint:fix": "eslint **/*.ts --fix",
     "test": "jest --testTimeout 10000"
   },
   "repository": {
@@ -32,10 +33,12 @@
     "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.10.0",
     "@actions/glob": "^0.3.0",
-    "@actions/io": "^1.1.2"
+    "@actions/io": "^1.1.2",
+    "ftp": "^0.3.10"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
+    "@types/ftp": "^0.3.33",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.48.0",
     "@vercel/ncc": "^0.36.0",
@@ -43,6 +46,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-github": "^4.6.0",
     "eslint-plugin-jest": "^27.2.0",
+    "ftp-srv": "^4.6.2",
     "glob": "^8.0.3",
     "jest": "^29.3.1",
     "jest-circus": "^29.3.1",
