--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ inputs:
 
       Minimum 1 day.
       Maximum 90 days unless changed from the repository settings page.
-  server:
+  host:
     required: true
   port:
     required: false
