secureオプションを追加

--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,9 @@ inputs:
   password:
     required: false
     default: anonymous
+  secure:
+    required: false
+    default: false
   remote-path:
     required: false
     default: /
